# sycl-microbench

./: .gitignore  Makefile  README.md  perf.data.old
include/: kernels.hpp  likwid-end.in  likwid-start.in  micro-bench-omp.hpp  parallel-bench.hpp  timer.hpp  utils.hpp  vectorization-bench.hpp
src/: CMakeLists.txt  kernels.cpp  main.cpp  micro-bench-omp.cpp  micro-bench-omp.hpp  micro-bench.cpp  micro-bench.hpp  parallel-bench-acc.cpp  parallel-bench-usm.cpp  parallel-bench.cpp  parallel-bench.hpp  timer.cpp  timer.hpp  utils.cpp  vectorization-bench.cpp  vectorization-bench.hpp
